--- a/lkl/lkl/templates/lkl/bind_pos.html
+++ b/lkl/lkl/templates/lkl/bind_pos.html
@@ -11,7 +11,7 @@
                 <label class="weui-label">终端号</label>
             </div>
             <div class="weui-cell__bd">
-                <input class="weui-input" id="code" name="code" type="text" placeholder="请输入终端号">
+                <input class="weui-input" id="code" name="code" type="text" placeholder="请输入CBC开头终端号">
             </div>
             <div class="weui-cell__ft">
                 <i class="weui-icon-warn">{{errors.code.0}}</i>
