--- a/lkl/lkl/templates/admin/reminder.html
+++ b/lkl/lkl/templates/admin/reminder.html
@@ -8,7 +8,7 @@
 <br/>
 <div class="results">
     <table id="result_list" class="table table-striped table-bordered table-hover table-condensed">
-        <caption align="top"><font size="5"> 未激活机器 去催刷单吧！</font></caption>
+        <caption align="top"><font size="5"> 未激活机器 快去催刷卡吧！</font></caption>
         <thead>
         <tr>
             <th>机器号</th>
