--- a/lkl/lkl/templates/lkl/base.html
+++ b/lkl/lkl/templates/lkl/base.html
@@ -19,6 +19,7 @@
     {% block header_css %}
     <link rel="stylesheet" href="{% static "/lkl/css/weui.min.css" %}">
     <link rel="stylesheet" href="{% static "/lkl/css/other.css" %}">
+    <link rel="stylesheet" href="{% static "/lkl/css/demos.css" %}">
     <link rel="stylesheet" href="{% static "/lkl/css/jquery-weui.min.css" %}">
     {% endblock %}
     <style type="text/css">
