--- a/lkl/lkl/templates/lkl/news.html
+++ b/lkl/lkl/templates/lkl/news.html
@@ -46,6 +46,21 @@
                         邀请新人注册，您的分润点和新人分润点的差额会作为奖励给到您。如果新人的分润点没有设置的话，会暂时不结算奖励，等到设置好，会补结算的。
                     </p>
                 </section>
+                <section>
+                    <h3>5. 结算分润的周期是多少？</h3>
+                    <p>
+                        所有的分润会结算到余额的，结算数据会延迟三天。因为官方系统延迟的原因，我们无法准时拿到数据。还有就是可能有退款的单子，需要等到退款完成。兼顾时效性和准确性，我们统一延迟结算三天。
+                    </p>
+                </section>
+                <section>
+                    <h3>6. 如何体现？为什么要收费？</h3>
+                    <p>
+                        目前满100元的会员权益，就可以申请体现。暂时通过支付宝人工给你打款。后续会改为微信账号自动到账。
+                    </p>
+                    <p>
+                        拉卡拉收取税费8%，微信支付扣税费1%，系统预付款给您会占用我们将近两个月的账期，我们收取1%。一共为10%。如果您的交易量大或者推荐用户多，我们可以调高您的分润点，以弥补您税费的损失。
+                    </p>
+                </section>
             </section>
             <a href="javascript:;" class="weui-btn weui-btn_primary close-popup">关闭</a>
         </article>
