--- a/lkl/lkl/templates/lkl/news.html
+++ b/lkl/lkl/templates/lkl/news.html
@@ -53,7 +53,7 @@
                     </p>
                 </section>
                 <section>
-                    <h3>6. 如何体现？为什么要收费？</h3>
+                    <h3>6. 如何提现？为什么要收费？</h3>
                     <p>
                         目前满100元的会员权益，就可以申请体现。暂时通过支付宝人工给你打款。后续会改为微信账号自动到账。
                     </p>
