--- a/lkl/lkl/templates/lkl/tixian_rmb.html
+++ b/lkl/lkl/templates/lkl/tixian_rmb.html
@@ -15,7 +15,7 @@
 <form method="post" action="{% url 'tixian_rmb' %}">
     {% csrf_token %}
     <div class="weui-cells weui-cells_form">
-        <div class="weui-cells__title">总费率10%，拉卡拉税费8%+微信支付税费1%+预付款利率1%。（暂时人工支付宝提现）后续微信自动到账。</div>
+        <div class="weui-cells__title fc-red">总费率10%，拉卡拉税费8%+微信支付税费1%+预付款利率1%。（暂时人工支付宝提现）后续微信自动到账。</div>
         <div class="weui-cell {%if errors.rmb %}weui-cell_warn{% endif %}">
             <div class="weui-cell__hd">
                 <label class="weui-label">提现金额</label>
