--- a/lkl/lkl/templates/lkl/user_info.html
+++ b/lkl/lkl/templates/lkl/user_info.html
@@ -64,7 +64,7 @@
 
     </div>
     <div class="weui-form-preview__ft">
-    <span class="weui-form-preview__btn weui-form-preview__btn_default">结算数据从2018年2月1日开始统计，累积到三天前的交易。</span>
+    <span class="weui-form-preview__btn weui-form-preview__btn_default fc-red">结算数据从2018年2月1日起，至三天前的交易。</span>
 
     </div>
 </div>
