--- a/lkl/lkl/templates/lkl/pos_detail.html
+++ b/lkl/lkl/templates/lkl/pos_detail.html
@@ -21,7 +21,7 @@
             手续费：{{ item.fee_rmb}}
           </div>
           <div class="weui-cell__bd">
-            {{ item.pay_date }}
+            {{ item.pay_date|date:'Y-m-d' }}
           </div>
         </div>
 
