--- a/lkl/lkl/templates/lkl/pos_detail.html
+++ b/lkl/lkl/templates/lkl/pos_detail.html
@@ -15,10 +15,10 @@
 
         <div class="weui-cell">
           <div class="weui-cell__bd">
-            金额：{{ item.draw_rmb}}
+            刷：{{ item.draw_rmb}}
           </div>
           <div class="weui-cell__bd">
-            手续费：{{ item.fee_rmb}}
+            费：{{ item.fee_rmb}}
           </div>
           <div class="weui-cell__bd">
             {{ item.pay_date|slice:":10" }}
