--- a/lkl/lkl/templates/lkl/pos_list.html
+++ b/lkl/lkl/templates/lkl/pos_list.html
@@ -15,7 +15,7 @@
 
         <div class="weui-cell">
           <div class="weui-cell__bd">
-            {{pos.code}}
+            **{{pos.code|slice:"-4:"}}
           </div>
           <div class="weui-cell__bd">
             {{pos.status}}
