--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -104,7 +104,7 @@
         <tr>
             <td>未提现——间接分润</td>
             <td>{{ child_urmb }}</td>
-            <td>功能规划中</td>
+            <td>待提现</td>
         </tr>
         <tr>
             <td>未分账</td>
