--- a/lkl/lkl/templates/lkl/friend_list.html
+++ b/lkl/lkl/templates/lkl/friend_list.html
@@ -45,7 +45,7 @@
                 刷卡总额：{{ d1 }}
               </div>
               <div class="weui-cell__bd">
-                {{obj.create_time}}
+                {{obj.create_time| date:"Ymd"}}
               </div>
             </div>
 
