--- a/lkl/lkl/templates/lkl/friend_list.html
+++ b/lkl/lkl/templates/lkl/friend_list.html
@@ -57,7 +57,7 @@
                   </div>
               {% endif %}
               <div class="weui-cell__bd">
-                {{ d1 }}
+                {{ d1|floatformat:"0" }}
               </div>
               <div class="weui-cell__bd">
                 {# {{obj.create_time| date:"Ymd"}} #}
