--- a/lkl/lkl/templates/lkl/friend_list.html
+++ b/lkl/lkl/templates/lkl/friend_list.html
@@ -48,7 +48,7 @@
                   <div class="weui-cell__bd">
                     {{ obj.user.userfenrun.point }}
                   {% if obj.user.userfenrun.rmb != '0.0' %}
-                    __{{ obj.user.userfenrun.rmb }}
+                    _{{ obj.user.userfenrun.rmb }}
                   {% endif %}
                   </div>
               {% else %}
