--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -17,12 +17,12 @@
             我的信息
         </p>
     </a>
-    <a href="javascript:;" class="weui-grid js_grid">
+    <a href="{% url 'tixian_list' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/biji.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
-            生活笔记
+            提现记录
         </p>
     </a>
     <a href="javascript:;" class="weui-grid js_grid" id="invite_code">
