--- a/lkl/lkl/templates/lkl/login.html
+++ b/lkl/lkl/templates/lkl/login.html
@@ -41,7 +41,7 @@
                 <img class="weui-vcode-img js-captcha-refresh" src="{{ img_url }}" />
             </div>
             <div class="weui-cell__ft">
-                <i class="weui-icon-warn">{{errors.captcha.0}}</i>
+                <i class="weui-icon-warn"></i>
             </div>
         </div>
 
