--- a/lkl/lkl/templates/admin/income.html
+++ b/lkl/lkl/templates/admin/income.html
@@ -1,9 +1,11 @@
 {% extends "admin/base_site.html" %}
 {% load admin_static %}
+{% load cache %}
 
 {% block content %}
 {{ block.super }}
 
+{% cache 3600 income %}
 <br/>
 <br/>
 <div id="d1" class="results">
@@ -117,5 +119,5 @@
     <br/>
 </div>
 
-
+{% endcache %}
 {% endblock %}
