--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -41,12 +41,12 @@
             我的地址
         </p>
     </a>
-    <a href="javascript:;" class="weui-grid js_grid">
+    <a href="{% url 'xyf_pos_list' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/sosuo.jpg" %}" alt="">
         </div>
         <p class="weui-grid__label">
-            查询
+            星星
         </p>
     </a>
     <a href="{% url 'friend_list' %}" class="weui-grid js_grid">
