--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -41,7 +41,7 @@
             我的地址
         </p>
     </a>
-    <a href="{% url 'xyf_pos_list' %}" class="weui-grid js_grid">
+    <a href="{% url 'xyf_home' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/sosuo.jpg" %}" alt="">
         </div>
