--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -35,10 +35,10 @@
     </a>
     <a href="{% url 'bind_wx' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="{% static "/lkl/icon/dizhi.png" %}" alt="">
+            <img src="{% static "/lkl/icon/wx.jpg" %}" alt="">
         </div>
         <p class="weui-grid__label">
-            我的地址
+            绑定微信
         </p>
     </a>
     <a href="{% url 'xyf_home' %}" class="weui-grid js_grid">
