--- a/lkl/lkl/templates/lkl/account.html
+++ b/lkl/lkl/templates/lkl/account.html
@@ -33,7 +33,7 @@
             邀请码
         </p>
     </a>
-    <a href="{% url 'bind_wx' %}" class="weui-grid js_grid">
+    <a href="{% url 'bind_wx_page' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/wx.jpg" %}" alt="">
         </div>
