--- a/lkl/lkl/templates/xyf/home.html
+++ b/lkl/lkl/templates/xyf/home.html
@@ -25,6 +25,14 @@
             我的终端
         </p>
     </a>
+    <a href="{% url 'bind_wx_page' %}" class="weui-grid js_grid">
+        <div class="weui-grid__icon">
+            <img src="{% static "/lkl/icon/wx.jpg" %}" alt="">
+        </div>
+        <p class="weui-grid__label">
+            绑定微信
+        </p>
+    </a>
     <a href="{% url 'user_logout' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/tuichu.jpg" %}" alt="">
