--- a/lkl/lkl/templates/xyf/user_info.html
+++ b/lkl/lkl/templates/xyf/user_info.html
@@ -44,7 +44,7 @@
 <br/>
 <div class="weui-form-preview">
     <div class="weui-form-preview__bd">
-        <label class="weui-form-preview__label">预计返利</label>
+        <label class="weui-form-preview__label">返利余额</label>
         <span class="weui-form-preview__value">
             {{ rmb }}
         </span>
