--- a/lkl/lkl/templates/jinkong/pos_detail.html
+++ b/lkl/lkl/templates/jinkong/pos_detail.html
@@ -4,26 +4,25 @@
 {% block container %}
 
 <div class="weui-topbar">
-    <h1 class="weui-topbar-title">我的终端</h1>
-    <a href="{% url 'xyf_home' %}"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
+    <h1 class="weui-topbar-title">终端明细</h1>
+    <a href="{% url 'jk_pos_list' %}"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
 </div>
 
 <div class="bd mt40 mb40">
 
     <div class="weui-cells">
-    {% for pos in poses %}
+    {% for item in detail %}
 
         <div class="weui-cell">
           <div class="weui-cell__bd">
-            **{{pos.sn|slice:"-4:"}}
+            刷：{{ item.draw_rmb}}
           </div>
           <div class="weui-cell__bd">
-            {{pos.status}}
+            费：{{ item.fee_rmb}}
           </div>
           <div class="weui-cell__bd">
-            <a href="{% url 'xyf_pos_detail' %}?pos={{pos.code}}">明细</a>
+            {{ item.pay_date|slice:":8" }}
           </div>
-
         </div>
 
     {% endfor %}
