--- a/lkl/lkl/templates/jinkong/user_info.html
+++ b/lkl/lkl/templates/jinkong/user_info.html
@@ -7,7 +7,7 @@
     <h1 class="weui-topbar-title">
         {{ request.user.userprofile.name }}
     </h1>
-    <a href="{% url 'xyf_home' %}"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
+    <a href="{% url 'jk_home' %}"  class="weui-topbar-back"><i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-zuojiantou"></use></svg></i></a>
 </div>
 
 <div class="bd mt40 mb40">
