--- a/lkl/lkl/templates/lkl/menu.html
+++ b/lkl/lkl/templates/lkl/menu.html
@@ -1,6 +1,6 @@
 <!--底部固定导航 开始-->
 <div class="weui-tabbar">
-    <a href="{% url 'user_home' %}" class="weui-tabbar__item " id="user_home">
+    <a href="{% url 'jk_home' %}" class="weui-tabbar__item " id="jk_home">
         <div class="weui-tabbar__icon">
         <i><svg class="icon" aria-hidden="true"><use xlink:href="#icon-home"></use></svg></i>
         </div>
