--- a/lkl/lkl/templates/lkl/base.html
+++ b/lkl/lkl/templates/lkl/base.html
@@ -88,7 +88,7 @@
     // $.alert(GetUrlRelativePath());
     var cls = "weui-bar__item--on";
     var url = GetUrlRelativePath();
-    var user_home = "{% url 'user_home' %}";
+    var user_home = "{% url 'jk_home' %}";
     var user_news = "{% url 'user_news' %}";
     if(url == user_home){
 　　　　$("#user_home").addClass(cls);
