--- a/lkl/lkl/templates/jinkong/home.html
+++ b/lkl/lkl/templates/jinkong/home.html
@@ -33,6 +33,14 @@
             绑定微信
         </p>
     </a>
+    <a href="{% url 'jk_merchant_prov' %}" class="weui-grid js_grid">
+        <div class="weui-grid__icon">
+            <img src="{% static "/lkl/icon/wx.jpg" %}" alt="">
+        </div>
+        <p class="weui-grid__label">
+            归属地
+        </p>
+    </a>
     <a href="{% url 'user_logout' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/tuichu.jpg" %}" alt="">
