--- a/lkl/lkl/templates/jinkong/merchant_prov.html
+++ b/lkl/lkl/templates/jinkong/merchant_prov.html
@@ -11,7 +11,7 @@
 <div class="bd mt40 mb40">
 
     <div class="weui-cells">
-    {% for merchant, prov in merchants %}
+    {% for merchant, prov in merchants.items %}
 
         <div class="weui-cell">
           <div class="weui-cell__bd">
