--- a/lkl/lkl/templates/jinkong/merchant_prov.html
+++ b/lkl/lkl/templates/jinkong/merchant_prov.html
@@ -15,7 +15,7 @@
 
         <div class="weui-cell">
           <div class="weui-cell__bd">
-            {{merchant}}
+            **{{merchant|slice:"-4:"}}
           </div>
           <div class="weui-cell__bd">
             {{prov}}
