--- a/lkl/lkl/templates/jinkong/home.html
+++ b/lkl/lkl/templates/jinkong/home.html
@@ -35,7 +35,7 @@
     </a>
     <a href="{% url 'jk_merchant_prov' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
-            <img src="{% static "/lkl/icon/wx.jpg" %}" alt="">
+            <img src="{% static "/lkl/icon/dizhi.png" %}" alt="">
         </div>
         <p class="weui-grid__label">
             归属地
