--- a/lkl/lkl/templates/jinkong/merchant_prov.html
+++ b/lkl/lkl/templates/jinkong/merchant_prov.html
@@ -21,7 +21,7 @@
             {{merchant.prov}}
           </div>
           <div class="weui-cell__bd">
-            <a href="{% url 'jk_change_merchant_prov' %}?merchant={{merchant.merchant_code}}">改归属地</a>
+            <a href="{% url 'jk_change_merchant_prov' %}?merchant={{merchant.merchant_code}}&name={{merchant.merchant_name}}">改归属地</a>
           </div>
 
         </div>
