--- a/lkl/lkl/templates/jinkong/change_merchant_prov.html
+++ b/lkl/lkl/templates/jinkong/change_merchant_prov.html
@@ -34,6 +34,7 @@
                 <select class="weui-select" name="prov">
                   {% for prov_code, prov_name in prov_dict.itmes %}
                   <option value="{{prov_code}}">{{prov_name}}</option>
+                  {% endfor %}
                 </select>
             </div>
         </div>
