--- a/lkl/lkl/templates/jinkong/user_info.html
+++ b/lkl/lkl/templates/jinkong/user_info.html
@@ -51,6 +51,13 @@
 
     </div>
 
+    <div class="weui-form-preview__bd">
+        <label class="weui-form-preview__label">已提现金额</label>
+        <span class="weui-form-preview__value">
+            {{ tx_rmb }}
+        </span>
+
+    </div>
 
 </div>
 <br>
