--- a/lkl/lkl/templates/admin/jk_income.html
+++ b/lkl/lkl/templates/admin/jk_income.html
@@ -38,8 +38,8 @@
         <thead>
         <tr>
             <th>激活月份</th>
-            <th>达标数量</th>
-            <th>激活总数量</th>
+            <th>激活数量</th>
+            <th>入库总数量</th>
         </tr>
         </thead>
         <tbody>
