--- a/lkl/lkl/templates/admin/jk_income.html
+++ b/lkl/lkl/templates/admin/jk_income.html
@@ -13,7 +13,7 @@
             <th>月份</th>
             <th>刷卡量</th>
             <th>手续费</th>
-            <th>总收入</th>
+            {# <th>总收入</th> #}
         </tr>
         </thead>
         <tbody>
@@ -22,7 +22,7 @@
             <td>{{ month }}</td>
             <td>{{ data.draw }}</td>
             <td>{{ data.fee }}</td>
-            <td>{{ data.rmb }}</td>
+            {# <td>{{ data.rmb }}</td> #}
         </tr>
         {% endfor %}
         </tbody>
