--- a/lkl/lkl/templates/jinkong/user_info.html
+++ b/lkl/lkl/templates/jinkong/user_info.html
@@ -48,7 +48,13 @@
         <span class="weui-form-preview__value">
             {{ rmb }}
         </span>
+    </div>
 
+    <div class="weui-form-preview__bd">
+        <label class="weui-form-preview__label">推荐返利余额</label>
+        <span class="weui-form-preview__value">
+            {{ child_rmb }}
+        </span>
     </div>
 
     <div class="weui-form-preview__bd">
