--- a/lkl/lkl/templates/jinkong/home.html
+++ b/lkl/lkl/templates/jinkong/home.html
@@ -25,6 +25,14 @@
             我的终端
         </p>
     </a>
+    <a href="{% url 'jk_bind_pos' %}:;" class="weui-grid js_grid">
+        <div class="weui-grid__icon">
+            <img src="{% static "/lkl/icon/gongsi.png" %}" alt="">
+        </div>
+        <p class="weui-grid__label">
+            绑定终端
+        </p>
+    </a>
     <a href="{% url 'jk_friend_list' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/haoyou.png" %}" alt="">
