--- a/lkl/lkl/templates/jinkong/home.html
+++ b/lkl/lkl/templates/jinkong/home.html
@@ -25,7 +25,7 @@
             我的终端
         </p>
     </a>
-    <a href="{% url 'jk_bind_pos' %}:;" class="weui-grid js_grid">
+    <a href="{% url 'jk_bind_pos' %}" class="weui-grid js_grid">
         <div class="weui-grid__icon">
             <img src="{% static "/lkl/icon/gongsi.png" %}" alt="">
         </div>
