--- a/lkl/lkl/templates/jinkong/user_info.html
+++ b/lkl/lkl/templates/jinkong/user_info.html
@@ -19,7 +19,7 @@
         {{ request.user.userprofile.phone }}
         </span>
     </div>
-    {% if fenrun %}
+    {# {% if fenrun %}
     <div class="weui-form-preview__bd">
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">分润点数</label>
@@ -33,7 +33,7 @@
             <span class="weui-form-preview__value">微信：45367076</span>
         </div>
     </div>
-    {% endif %}
+    {% endif %} #}
     <div class="weui-form-preview__bd">
         <div class="weui-form-preview__item">
             <label class="weui-form-preview__label">刷卡总额</label>
