--- a/lkl/lkl/templates/lkl/base.html
+++ b/lkl/lkl/templates/lkl/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     {% block header_title  %}
-    <title>卡拉慧</title>
+    <title>{{ site_title }}</title>
     {% endblock %}
 
     <meta name="renderer" content="webkit">
