--- a/lkl/lkl/templates/admin/base_site.html
+++ b/lkl/lkl/templates/admin/base_site.html
@@ -46,11 +46,11 @@
 {# Footer branding name (center) #}
 
 {% block footer_branding %}
-跟狼哥，有肉吃。。。
+{{ site_bottom_desc }}
 {% endblock %}
 
 
 {# Footer copyright (right side) #}
 {% block copyright %}
-Copyright &copy; 2018 小狼<br/>
+Copyright &copy; 2018 {{ site_bottom_name }}<br/>
 {% endblock %}
